# sample-ackermann-amr

./: .gitattributes  README.md  pyproject.toml
assets/: Cameras.usd  F1Tenth.usd  F1Tenth_ROS.usd  Joint_Rigging.usd  Lapper.usd  Make_Asset.usd  Mass_Properties.usd  Materials.usd  ROS_Actiongraph.usd  Racing_Grid.usd  Racing_Grid_Start.usd  Reparenting.usd  Track.usd
assets/CAD_Imports/Template_3/: Full_Car_base.usd
assets/CAD_Imports/Template_3/materials/: materials.usd
assets/CAD_Imports/Template_3/parts/: Chassis_RhBD.usd  Shock_Front_Left_Lower_R0BD.usd  Shock_Front_Left_Upper_RxBD.usd  Shock_Front_Right_Lower_RpBD.usd  Shock_Front_Right_Upper_RmBD.usd  Shock_Rear_Left_Lower_RICD.usd  Shock_Rear_Left_Upper_RFCD.usd  Shock_Rear_Right_Lower_R2BBD.usd  Shock_Rear_Right_Upper_R7BD.usd  Steering_Knuckle_Left_RyED.usd  Steering_Knuckle_Right_RsED.usd  Suspension_Arm_Front_Lower_Left_RXCD.usd  Suspension_Arm_Front_Lower_Right_RMCD.usd  Suspension_Arm_Front_Upper_Left_RVCD.usd  Suspension_Arm_Front_Upper_Right_RCCD.usd  Suspension_Arm_Rear_Lower_Left_R2BBD.usd  Suspension_Arm_Rear_Lower_Right_RyBD.usd  Suspension_Arm_Rear_Upper_Left_R8BD.usd  Suspension_Arm_Rear_Upper_Right_RhBD.usd  Upright_Front_Left_RmED.usd  Upright_Front_Right_RkED.usd  (+6 more)
exts/omni.sample.ackermann_amr_trainer/config/: extension.toml
exts/omni.sample.ackermann_amr_trainer/docs/: README.md  index.rst
ros2_f1_tenth_trainer/: Prerequisites.txt  ackermann_amr_policy.py  model_evaluate.py  model_evaluate_start.py  teleop_ackermann_key.py  teleop_ackermann_key_start.py
tutorial/: tutorial.md
(+15 files in other folders)
